--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Dependencias
+/node_modules
+/node_modules/
+node_modules/
 
 # Entorno
 .env
@@ -10,10 +10,26 @@ yarn-error.log*
 .env.test.local
 .env.production.local
 
-# Editor
-.vscode/
-.idea/
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE
+.vscode
+.idea
+*.swp
+*.swo
 
 # Sistema
 .DS_Store
 Thumbs.db
+
+# Build
+/dist
+/build
+/out
+.next
+
+# Coverage
+/coverage
